2015-06-19  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	bug #43011: Bug in struct definition of __reg_UCSR1C and 
	__reg_UCSR0C in iom128rfa1.h
	* include/avr/iom128rfa1.h (struct __reg_UCSR0C, struct __reg_UCSR1C):
	Remove SPI mode only bitfields.
	(UCPHA0,UDORD0,UCPHA1,UDORD1): Remove duplicates.

2015-06-18  Georg-Johann Lay <avr@gjlay.de>
            Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	bug #43828: wdt.h: Wrong inline assembler arguments
	* include/avr/wdt.h (wdt_enable/wdt_disable): Update constraints for
	inline asm operands

2015-05-07  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	bug #44869: trunk doesn't work with gcc 5.1.0-RC-20150412
	* configure.ac (HAS_GCC_5_1): Define if avr-gcc version is 5.1.0
	(--enable-device-lib): Add configure option.
	(HAS_DEV_LIB): Define if enabled by --enable-device-lib or avr-gcc
	version is >= 5.1.0.
	* devtools/Device.am (AVR_TARGET_CRT, AVR_INSTALL_DIR): Define
	based on avr-gcc version.
	(avr_LIBRARIES): Likewise.
	* devtools/gen-avr-lib-tree.sh: Use old crt name.
	* libc/Makefile.am: Include misc sub-directory if device library is
	not enabled.
	* libc/misc/Rules.am: Include eeprom function name mangling if device
	library is not enabled.

2015-04-15  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	bug #44574: Place device-specific libraries in their multilib directory.
	* configure.ac (AC_CONFIG_FILES): Replace dev directory with architecture
	directory where device specific lib (lib<device>.a) and startup object
	file (crt<device>.o) to be installed.
	* devtools/Devices.am (avr_LIBRARIES): Change device library name to
	lib<device>.a.
	* devtools/gen-avr-lib-tree.sh (AVR12_DEV_INFO): Remove tiny stack devices
	as they are part of AVR12TS_DEV_INFO.
	(AVR25_DEV_INFO): Ditto.
	Change startup object file name to crt<device>.o and install location to
	multilib (architecture) directory.

2015-04-08  Martin Nowak <code@dawg.eu>
            Pitchumani Sivanupandi <pitchumani.s@atmel.com>
